# agentledger

./: README.md  pyproject.toml
agentledger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentledger/instrumentation/: __init__.py  tracer.py
agentledger/pipeline/: __init__.py  agents.py  graph.py
agentledger/wit/: __init__.py  context.py  token.py
scripts/: demo.py
tests/: test_pipeline.py  test_wit.py
